--- a/view.html
+++ b/view.html
@@ -188,8 +188,9 @@
             <h2>New Frame</h2>
             <div class="frame-row">
                 <div class="frame">
-                    <img src="Image/Frame (1).jpg" alt="Black Frame">
-                    <p>Frame (1)</p>
+                    <img src="https://github.com/sagarsardarcr7123/Photo frame/blob/main/Frame%20(2).jpg?raw=true" alt="Black Frame">
+                    <h3>Frame (1)</h3>
+                    <p class="price">$3.99</p>
                 </div>
                 <div class="frame">
                     <img src="Image/Frame (2).jpg" alt="Black Frame">
