--- a/view.html
+++ b/view.html
@@ -795,7 +795,7 @@
             </div>
         </section> -->
     </div>
-    <a href="asfsd.html" class="back-button">Back</a>
+    <a href="index.html" class="back-button">Back</a>
 
     <!-- Image Modal -->
     <div id="myModal" class="modal">
