--- a/view.html
+++ b/view.html
@@ -187,7 +187,7 @@
         <section class="frame-category">
             <h2>New Frame</h2>
             <div class="frame-row">
-                <<div class="frame">
+                <div class="frame">
     <img src="https://github.com/sagarsardarcr7123/Photoframe/blob/main/Frame%20(1).jpg?raw=true" alt="Black Frame">
     <h3>Frame (1)</h3>
     <p class="price">$30.99</p>
