--- a/view.html
+++ b/view.html
@@ -668,25 +668,25 @@
 </div>
 
 <div class="frame">
-    <img src="https://github.com/sagarsardarcr7123/Photoframe/blob/main/Frame%20(80)a.jpg?raw=true" alt="Black Frame">
+    <img src="https://github.com/sagarsardarcr7123/Photoframe/blob/main/Frame(80)a.jpg?raw=true" alt="Black Frame">
     <h3>Frame (81)</h3>
     <p class="price">$30.99</p>
 </div>
 
 <div class="frame">
-    <img src="https://github.com/sagarsardarcr7123/Photoframe/blob/main/Frame%20(80)b.jpg?raw=true" alt="Black Frame">
+    <img src="https://github.com/sagarsardarcr7123/Photoframe/blob/main/Frame(80)b.jpg?raw=true" alt="Black Frame">
     <h3>Frame (82)</h3>
     <p class="price">$30.99</p>
 </div>
 
 <div class="frame">
-    <img src="https://github.com/sagarsardarcr7123/Photoframe/blob/main/Frame%20(80)c.jpg?raw=true" alt="Black Frame">
+    <img src="https://github.com/sagarsardarcr7123/Photoframe/blob/main/Frame(80)c.jpg?raw=true" alt="Black Frame">
     <h3>Frame (83)</h3>
     <p class="price">$30.99</p>
 </div>
 
 <div class="frame">
-    <img src="https://github.com/sagarsardarcr7123/Photoframe/blob/main/Frame%20(80)d.jpg?raw=true" alt="Black Frame">
+    <img src="https://github.com/sagarsardarcr7123/Photoframe/blob/main/Frame(80)d.jpg?raw=true" alt="Black Frame">
     <h3>Frame (84)</h3>
     <p class="price">$30.99</p>
 </div>
